2015/5/27 更新流转卡料品选取界面

--- a/BarCodeSystem/ProductDispatch/FlowCard/FlowCard_Page.xaml
+++ b/BarCodeSystem/ProductDispatch/FlowCard/FlowCard_Page.xaml
@@ -7,6 +7,7 @@
       Title="流转卡编制页面"
       Loaded="Page_Loaded"
       d:DesignHeight="600" d:DesignWidth="800" SizeChanged="Page_SizeChanged"
+      ShowsNavigationUI="False"
 	>
     <Grid>
         <Grid.RowDefinitions>
@@ -27,91 +28,105 @@
             </Label.Background>
         </Label>
 
-        <GroupBox Grid.Row="1" >
-            <GroupBox.Header>
-                <TextBlock  Style="{StaticResource textb_NormalStyle}" FontFamily="华文行楷">流转卡表头信息</TextBlock>
-            </GroupBox.Header>
-            <Grid  Name="CardHeaderGrid" >
-                <Grid.RowDefinitions>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                </Grid.ColumnDefinitions>
+        <Grid Grid.Row="1" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*"></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <GroupBox >
+                <GroupBox.Header>
+                    <TextBlock  Style="{StaticResource textb_NormalStyle}" FontFamily="华文行楷">流转卡表头信息</TextBlock>
+                </GroupBox.Header>
+                <Grid Name="CardHeaderGrid">
+                    <Grid.RowDefinitions>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition Width="2*"></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition Width="2*"></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition Width="2*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Row="1" Text="流转卡类型:" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5"></TextBlock>
-                <ComboBox VerticalAlignment="Center" ItemsSource="{Binding}"  Grid.Row="1"  Name="cb_FlowCardType" Grid.Column="1" Margin="0 0 20 0">
-                </ComboBox>
+                    <TextBlock Grid.Row="1" Text="流转卡类型:" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5"></TextBlock>
+                    <ComboBox VerticalAlignment="Center" ItemsSource="{Binding}"  Grid.Row="1"  Name="cb_FlowCardType" Grid.Column="1" Margin="0 0 20 0">
+                    </ComboBox>
 
-                <TextBlock Text="流转卡编号:" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5"></TextBlock>
-                <TextBox  Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"   IsReadOnly="True" Text="系统自动生成" TextAlignment="Center" Background="LightGray" TextWrapping="Wrap" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left"></TextBox>
+                    <TextBlock Text="流转卡编号:" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5"></TextBlock>
+                    <TextBox  Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"   IsReadOnly="True" Text="系统自动生成" TextAlignment="Center" Background="LightGray" TextWrapping="Wrap" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left"></TextBox>
 
-                <TextBlock Text="产品:" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5"></TextBlock>
-                <StackPanel  Grid.Column="3" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
-                    <TextBox IsReadOnly="True" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" BorderBrush="White"></TextBox>
-                    <Button Name="btn_ItemSearch" Cursor="Hand" Click="btn_ItemSearch_Click" Style="{StaticResource btn_SearchStyle}"  Background="White" BorderBrush="White">
-                        <Image Height="15" Source="../../Images/Zoom.ico"></Image>
-                    </Button>
-                </StackPanel>
+                    <TextBlock Text="产品:" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5"></TextBlock>
+                    <StackPanel  Grid.Column="3" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
+                        <TextBox Name="txtb_ItemInfo" IsReadOnly="True" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" BorderBrush="White"></TextBox>
+                        <Button Name="btn_ItemSearch" Cursor="Hand" Click="btn_ItemSearch_Click" Style="{StaticResource btn_SearchStyle}"  Background="White" BorderBrush="White">
+                            <Image Height="15" Source="../../Images/Zoom.ico"></Image>
+                        </Button>
+                    </StackPanel>
 
 
-                <TextBlock Text="工艺路线版本:" Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5"></TextBlock>
-                <StackPanel Grid.Column="5" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
-                    <TextBox IsReadOnly="True"  Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
-                    <Button Cursor="Hand" Style="{StaticResource btn_SearchStyle}" Name="btn_TechRouteSearch" Background="White" BorderBrush="White">
-                        <Image Height="15" Source="../../Images/Zoom.ico"></Image>
-                    </Button>
-                </StackPanel>
+                    <TextBlock Text="工艺路线版本:" Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5"></TextBlock>
+                    <StackPanel Grid.Column="5" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
+                        <TextBox IsReadOnly="True"  Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
+                        <Button Cursor="Hand" Style="{StaticResource btn_SearchStyle}" Name="btn_TechRouteSearch" Background="White" BorderBrush="White">
+                            <Image Height="15" Source="../../Images/Zoom.ico"></Image>
+                        </Button>
+                    </StackPanel>
 
-                <TextBlock Text="编制日期:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Grid.Row="1"></TextBlock>
-                <DatePicker Grid.Column="3" Grid.Row="1" VerticalAlignment="Center"></DatePicker>
+                    <TextBlock Text="编制日期:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Grid.Row="1"></TextBlock>
+                    <DatePicker Cursor="Hand" Grid.Column="3" Grid.Row="1" VerticalAlignment="Center"></DatePicker>
 
-                <TextBlock Text="生产车间:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="4" Grid.Row="1"></TextBlock>
-                <StackPanel Grid.Column="5" Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
-                    <TextBox IsReadOnly="True"  Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
-                    <Button Cursor="Hand" Style="{StaticResource btn_SearchStyle}" Name="btn_WorkCenterSearch" Background="White" BorderBrush="White">
-                        <Image Height="15" Source="../../Images/Zoom.ico"></Image>
-                    </Button>
-                </StackPanel>
+                    <TextBlock Text="生产车间:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="4" Grid.Row="1"></TextBlock>
+                    <StackPanel Grid.Column="5" Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
+                        <TextBox IsReadOnly="True"  Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
+                        <Button Cursor="Hand" Style="{StaticResource btn_SearchStyle}" Name="btn_WorkCenterSearch" Background="White" BorderBrush="White">
+                            <Image Height="15" Source="../../Images/Zoom.ico"></Image>
+                        </Button>
+                    </StackPanel>
 
-                <TextBlock Text="生产订单:" VerticalAlignment="Center" HorizontalAlignment="Right"  Grid.Row="2"></TextBlock>
-                <StackPanel Grid.Column="1" Grid.Row="2" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
-                    <TextBox IsReadOnly="True"  Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
-                    <Button Cursor="Hand" Style="{StaticResource btn_SearchStyle}" Name="btn_SourceOrderSearch" Background="White" BorderBrush="White">
-                        <Image Height="15" Source="../../Images/Zoom.ico"></Image>
-                    </Button>
-                </StackPanel>
+                    <TextBlock Text="生产订单:" VerticalAlignment="Center" HorizontalAlignment="Right"  Grid.Row="2"></TextBlock>
+                    <StackPanel Grid.Column="1" Grid.Row="2" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
+                        <TextBox IsReadOnly="True"  Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
+                        <Button Cursor="Hand" Style="{StaticResource btn_SearchStyle}" Name="btn_SourceOrderSearch" Background="White" BorderBrush="White">
+                            <Image Height="15" Source="../../Images/Zoom.ico"></Image>
+                        </Button>
+                    </StackPanel>
 
-                <TextBlock Text="派工数量:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2"  Grid.Row="2"></TextBlock>
-                <TextBlock Background="LightGray" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" Name="textb_Amount" Grid.Column="3" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Left"></TextBlock>
+                    <TextBlock Text="派工数量:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2"  Grid.Row="2"></TextBlock>
+                    <TextBlock Background="LightGray" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" Name="textb_Amount" Grid.Column="3" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Left"></TextBlock>
 
-                <TextBlock Text="分批来源流转卡:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="4" Grid.Row="2"></TextBlock>
-                <StackPanel Grid.Column="5" Grid.Row="2" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
-                    <TextBox IsReadOnly="True"  Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
-                    <Button Cursor="Hand" Style="{StaticResource btn_SearchStyle}" Name="btn_SoureFlowCardSearch" Background="White" BorderBrush="White">
-                        <Image Height="15" Source="../../Images/Zoom.ico"></Image>
-                    </Button>
-                </StackPanel>
+                    <TextBlock Text="分批来源流转卡:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="4" Grid.Row="2"></TextBlock>
+                    <StackPanel Grid.Column="5" Grid.Row="2" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
+                        <TextBox IsReadOnly="True"  Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
+                        <Button Cursor="Hand" Style="{StaticResource btn_SearchStyle}" Name="btn_SoureFlowCardSearch" Background="White" BorderBrush="White">
+                            <Image Height="15" Source="../../Images/Zoom.ico"></Image>
+                        </Button>
+                    </StackPanel>
 
-                <TextBlock Text="编制人员:" VerticalAlignment="Center" HorizontalAlignment="Right"  Grid.Row="3"></TextBlock>
-                <TextBlock Background="LightGray" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" Name="textb_CreatedBy" Grid.Column="1" Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Left"></TextBlock>
+                    <TextBlock Text="编制人员:" VerticalAlignment="Center" HorizontalAlignment="Right"  Grid.Row="3"></TextBlock>
+                    <TextBlock Background="LightGray" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" Name="textb_CreatedBy" Grid.Column="1" Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Left"></TextBlock>
 
-                <TextBlock Text="审核人员:" VerticalAlignment="Center" HorizontalAlignment="Right"  Grid.Column="2" Grid.Row="3"></TextBlock>
-                <TextBlock Background="LightGray" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" Name="textb_CheckedBy" Grid.Column="3" Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Left"></TextBlock>
+                    <TextBlock Text="审核人员:" VerticalAlignment="Center" HorizontalAlignment="Right"  Grid.Column="2" Grid.Row="3"></TextBlock>
+                    <TextBlock Background="LightGray" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" Name="textb_CheckedBy" Grid.Column="3" Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Left"></TextBlock>
 
-                <TextBlock Text="流转卡状态:" VerticalAlignment="Center" HorizontalAlignment="Right"  Grid.Column="4" Grid.Row="3"></TextBlock>
-                <TextBlock Background="LightGray" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" Name="textb_CardState" Grid.Column="5" Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Left"></TextBlock>
+                    <TextBlock Text="流转卡状态:" VerticalAlignment="Center" HorizontalAlignment="Right"  Grid.Column="4" Grid.Row="3"></TextBlock>
+                    <TextBlock Background="LightGray" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" Name="textb_CardState" Grid.Column="5" Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Left"></TextBlock>
+                </Grid>
+            </GroupBox>
 
-            </Grid>
-        </GroupBox>
+            <GroupBox Name="gb_SearchInfo" Grid.Column="1">
+                <GroupBox.Header>
+                    <TextBlock Name="textb_SearchInfo"  Style="{StaticResource textb_NormalStyle}" FontFamily="华文行楷"></TextBlock>
+                </GroupBox.Header>
+                <Frame Name="frame_SearchInfo" JournalOwnership="OwnsJournal" ></Frame>
+            </GroupBox>
+
+        </Grid>
+
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*"></ColumnDefinition>
@@ -156,12 +171,12 @@
                     </DataGrid>
                 </Grid>
             </GroupBox>
-            
+
             <GroupBox  Grid.Column="1">
                 <GroupBox.Header>
                     <TextBlock  Style="{StaticResource textb_NormalStyle}" FontFamily="华文行楷">流转卡质量信息</TextBlock>
                 </GroupBox.Header>
-                
+
                 <DataGrid ColumnWidth="Auto" RowHeaderWidth="30">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="行号"></DataGridTextColumn>
