--- a/BarCodeSystem/ProductDispatch/FlowCard/FlowCard_Page.xaml
+++ b/BarCodeSystem/ProductDispatch/FlowCard/FlowCard_Page.xaml
@@ -13,6 +13,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="30"></RowDefinition>
             <RowDefinition Height="2*"></RowDefinition>
+            <RowDefinition Height="15"></RowDefinition>
             <RowDefinition Height="4*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
@@ -27,15 +28,17 @@
                 </LinearGradientBrush>
             </Label.Background>
         </Label>
-
+        <GridSplitter Grid.Row="2" Height="5" Foreground="AliceBlue" VerticalAlignment="Center" HorizontalAlignment="Stretch"></GridSplitter>
         <Grid Grid.Row="1" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*"></ColumnDefinition>
+                <ColumnDefinition Width="15"></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
+            <GridSplitter Grid.Column="1" Width="5" Foreground="AliceBlue" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></GridSplitter>
             <GroupBox >
                 <GroupBox.Header>
-                    <TextBlock  Style="{StaticResource textb_NormalStyle}" FontFamily="华文行楷">流转卡表头信息</TextBlock>
+                    <TextBlock  Style="{StaticResource textb_NormalStyle}" >流转卡表头信息</TextBlock>
                 </GroupBox.Header>
                 <Grid Name="CardHeaderGrid">
                     <Grid.RowDefinitions>
@@ -62,27 +65,27 @@
 
                     <TextBlock Text="产品:" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5"></TextBlock>
                     <StackPanel  Grid.Column="3" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
-                        <TextBox Name="txtb_ItemInfo" IsReadOnly="True" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" BorderBrush="White"></TextBox>
-                        <Button Name="btn_ItemSearch" Cursor="Hand" Click="btn_ItemSearch_Click" Style="{StaticResource btn_SearchStyle}"  Background="White" BorderBrush="White">
+                        <TextBox  Name="txtb_ItemInfo" Text="来自生产订单" IsReadOnly="True" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" BorderBrush="White"></TextBox>
+                        <!--<Button Name="btn_ItemSearch" Cursor="Hand" Click="btn_ItemSearch_Click" Style="{StaticResource btn_SearchStyle}"  Background="White" BorderBrush="White">
                             <Image Height="15" Source="../../Images/Zoom.ico"></Image>
-                        </Button>
+                        </Button>-->
                     </StackPanel>
 
 
-                    <TextBlock Text="工艺路线版本:" Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5"></TextBlock>
+                    <TextBlock  Text="工艺路线版本:" Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5"></TextBlock>
                     <StackPanel Grid.Column="5" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
-                        <TextBox IsReadOnly="True"  Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
-                        <Button Cursor="Hand" Style="{StaticResource btn_SearchStyle}" Name="btn_TechRouteSearch" Background="White" BorderBrush="White">
+                        <TextBox  Name="txtb_TechRouteVersion" IsReadOnly="True" Text="点击放大镜选择" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
+                        <Button Cursor="Hand" Style="{StaticResource btn_SearchStyle}" Click="btn_TechRouteSearch_Click" Name="btn_TechRouteSearch"  Background="White" BorderBrush="White">
                             <Image Height="15" Source="../../Images/Zoom.ico"></Image>
                         </Button>
                     </StackPanel>
 
                     <TextBlock Text="编制日期:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Grid.Row="1"></TextBlock>
-                    <DatePicker Cursor="Hand" Grid.Column="3" Grid.Row="1" VerticalAlignment="Center"></DatePicker>
+                    <DatePicker  Cursor="Hand" Grid.Column="3" Grid.Row="1" VerticalAlignment="Center"></DatePicker>
 
                     <TextBlock Text="生产车间:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="4" Grid.Row="1"></TextBlock>
                     <StackPanel Grid.Column="5" Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
-                        <TextBox IsReadOnly="True"  Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
+                        <TextBox IsReadOnly="True" Text="点击放大镜选择" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
                         <Button Cursor="Hand" Style="{StaticResource btn_SearchStyle}" Name="btn_WorkCenterSearch" Background="White" BorderBrush="White">
                             <Image Height="15" Source="../../Images/Zoom.ico"></Image>
                         </Button>
@@ -90,18 +93,18 @@
 
                     <TextBlock Text="生产订单:" VerticalAlignment="Center" HorizontalAlignment="Right"  Grid.Row="2"></TextBlock>
                     <StackPanel Grid.Column="1" Grid.Row="2" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
-                        <TextBox IsReadOnly="True"  Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
-                        <Button Cursor="Hand" Style="{StaticResource btn_SearchStyle}" Name="btn_SourceOrderSearch" Background="White" BorderBrush="White">
+                        <TextBox IsReadOnly="True" Text="点击放大镜选择" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
+                        <Button Cursor="Hand" Style="{StaticResource btn_SearchStyle}" Name="btn_SourceOrderSearch" Click="btn_SourceOrderSearch_Click" Background="White" BorderBrush="White">
                             <Image Height="15" Source="../../Images/Zoom.ico"></Image>
                         </Button>
                     </StackPanel>
 
                     <TextBlock Text="派工数量:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2"  Grid.Row="2"></TextBlock>
-                    <TextBlock Background="LightGray" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" Name="textb_Amount" Grid.Column="3" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Left"></TextBlock>
+                    <TextBox Background="LightGray"  Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" Name="textb_Amount" Grid.Column="3" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Left"></TextBox>
 
                     <TextBlock Text="分批来源流转卡:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="4" Grid.Row="2"></TextBlock>
                     <StackPanel Grid.Column="5" Grid.Row="2" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
-                        <TextBox IsReadOnly="True"  Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
+                        <TextBox IsReadOnly="True" Text="分批流转卡专项" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
                         <Button Cursor="Hand" Style="{StaticResource btn_SearchStyle}" Name="btn_SoureFlowCardSearch" Background="White" BorderBrush="White">
                             <Image Height="15" Source="../../Images/Zoom.ico"></Image>
                         </Button>
@@ -118,44 +121,49 @@
                 </Grid>
             </GroupBox>
 
-            <GroupBox Name="gb_SearchInfo" Grid.Column="1">
+            <GroupBox Name="gb_SearchInfo" Grid.Column="2">
                 <GroupBox.Header>
                     <TextBlock Name="textb_SearchInfo"  Style="{StaticResource textb_NormalStyle}" FontFamily="华文行楷"></TextBlock>
                 </GroupBox.Header>
-                <Frame Name="frame_SearchInfo" JournalOwnership="OwnsJournal" ></Frame>
+                <!--<Frame Name="frame_SearchInfo" JournalOwnership="OwnsJournal" ></Frame>-->
             </GroupBox>
 
         </Grid>
 
-        <Grid Grid.Row="2">
+        <Grid Grid.Row="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*"></ColumnDefinition>
                 <ColumnDefinition ></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <GroupBox >
                 <GroupBox.Header>
-                    <TextBlock  Style="{StaticResource textb_NormalStyle}" FontFamily="华文行楷">流转卡行表信息</TextBlock>
+                    <TextBlock  Style="{StaticResource textb_NormalStyle}" >流转卡行表信息</TextBlock>
                 </GroupBox.Header>
                 <Grid Name="CardDetailGrid">
                     <Grid.RowDefinitions>
                         <RowDefinition></RowDefinition>
                         <RowDefinition Height="40"></RowDefinition>
                     </Grid.RowDefinitions>
-                    <DataGrid ColumnWidth="Auto" RowHeaderWidth="30">
+                    <DataGrid CanUserAddRows="False" AutoGenerateColumns="False" ColumnWidth="Auto" Name="datagrid_TechRouteInfo" RowHeaderWidth="30">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="行号"></DataGridTextColumn>
-                            <DataGridTextColumn Header="工序名称"></DataGridTextColumn>
+                            <DataGridTextColumn Header="行号" IsReadOnly="True" Binding="{Binding Path=TR_ProcessSequence}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="工序名称" IsReadOnly="True" Binding="{Binding Path=TR_ProcessName}"></DataGridTextColumn>
                             <DataGridTemplateColumn Header="操作工">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <StackPanel Orientation="Horizontal">
-                                            <TextBlock Text="{Binding}"></TextBlock>
-                                            <Button Cursor="Hand" Style="{StaticResource btn_SearchStyle}" Name="btn_PersonSearch" Background="White" BorderBrush="White">
+                                        <TextBlock Text="{Binding Path=TR_ItemCode}" Name="textb_Person" VerticalAlignment="Center"  ></TextBlock>
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                                <DataGridTemplateColumn.CellEditingTemplate>
+                                    <DataTemplate>
+                                        <StackPanel  Orientation="Horizontal" VerticalAlignment="Center" >
+                                            <TextBox Width="80" Text="{Binding Path=TR_ItemCode,Mode=TwoWay}" VerticalAlignment="Center" ></TextBox>
+                                            <Button Name="btn_ItemSearch" Cursor="Hand" Click="btn_ItemSearch_Click" Style="{StaticResource btn_SearchStyle}"  Background="White" BorderBrush="White">
                                                 <Image Height="15" Source="../../Images/Zoom.ico"></Image>
                                             </Button>
                                         </StackPanel>
                                     </DataTemplate>
-                                </DataGridTemplateColumn.CellTemplate>
+                                </DataGridTemplateColumn.CellEditingTemplate>
                             </DataGridTemplateColumn>
                             <DataGridTextColumn Header="投入数"></DataGridTextColumn>
                             <DataGridTextColumn Header="合格数"></DataGridTextColumn>
@@ -164,8 +172,11 @@
                             <DataGridTextColumn Header="料废数"></DataGridTextColumn>
                             <DataGridTextColumn Header="不良数"></DataGridTextColumn>
                             <DataGridTextColumn Header="待处理数"></DataGridTextColumn>
-                            <DataGridTextColumn Header="是否测试工序"></DataGridTextColumn>
-                            <DataGridTextColumn Header="是否返工工序"></DataGridTextColumn>
+                            <DataGridTextColumn Header="生产车间" IsReadOnly="True"></DataGridTextColumn>
+                            <DataGridTextColumn Header="是否测试工序" IsReadOnly="True"></DataGridTextColumn>
+                            <DataGridTextColumn Header="是否返工工序" IsReadOnly="True"></DataGridTextColumn>
+                            <DataGridTextColumn Header="是首道工工序" IsReadOnly="True"></DataGridTextColumn>
+                            <DataGridTextColumn Header="是末道工工序" IsReadOnly="True"></DataGridTextColumn>
                             <DataGridTextColumn Header="日期"></DataGridTextColumn>
                         </DataGrid.Columns>
                     </DataGrid>
@@ -174,7 +185,7 @@
 
             <GroupBox  Grid.Column="1">
                 <GroupBox.Header>
-                    <TextBlock  Style="{StaticResource textb_NormalStyle}" FontFamily="华文行楷">流转卡质量信息</TextBlock>
+                    <TextBlock  Style="{StaticResource textb_NormalStyle}">流转卡质量信息</TextBlock>
                 </GroupBox.Header>
 
                 <DataGrid ColumnWidth="Auto" RowHeaderWidth="30">
