--- a/BarCodeSystem/ProductDispatch/FlowCard/TechRouteSearch_Page.xaml
+++ b/BarCodeSystem/ProductDispatch/FlowCard/TechRouteSearch_Page.xaml
@@ -59,6 +59,7 @@
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
+            <Label Name="label_ErrorInfo" Background="DodgerBlue" Visibility="Hidden">没有工艺信息，请先在系统中录入工艺信息</Label>
             <Button Grid.Column="1" Content="选定工艺路线"  Margin="10 0" Name="btn_Submit" Click="btn_Submit_Click"></Button>
         </Grid>
     </Grid>
