--- a/BarCodeSystem/ProductDispatch/FlowCard/FlowCard_Page.xaml
+++ b/BarCodeSystem/ProductDispatch/FlowCard/FlowCard_Page.xaml
@@ -3,12 +3,16 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:BarCodeSystem.PublicClass.ValueConverters"
       mc:Ignorable="d" 
       Title="流转卡编制页面"
       Loaded="Page_Loaded"
       d:DesignHeight="600" d:DesignWidth="800" SizeChanged="Page_SizeChanged"
       ShowsNavigationUI="False"
 	>
+    <Page.Resources>
+        <local:TrueOrFalseConverter x:Key="boolConvert"></local:TrueOrFalseConverter>
+    </Page.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30"></RowDefinition>
@@ -65,7 +69,7 @@
 
                     <TextBlock Text="产品:" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5"></TextBlock>
                     <StackPanel  Grid.Column="3" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
-                        <TextBox  Name="txtb_ItemInfo" Text="来自生产订单" IsReadOnly="True" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" BorderBrush="White"></TextBox>
+                        <TextBox  VerticalAlignment="Center" Name="txtb_ItemInfo" Text="来自生产订单" IsReadOnly="True" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" BorderBrush="White"></TextBox>
                         <!--<Button Name="btn_ItemSearch" Cursor="Hand" Click="btn_ItemSearch_Click" Style="{StaticResource btn_SearchStyle}"  Background="White" BorderBrush="White">
                             <Image Height="15" Source="../../Images/Zoom.ico"></Image>
                         </Button>-->
@@ -74,18 +78,18 @@
 
                     <TextBlock  Text="工艺路线版本:" Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5"></TextBlock>
                     <StackPanel Grid.Column="5" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
-                        <TextBox  Name="txtb_TechRouteVersion" IsReadOnly="True" Text="点击放大镜选择" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
+                        <TextBox  VerticalAlignment="Center" Name="txtb_TechRouteVersion" IsReadOnly="True" Text="点击放大镜选择" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
                         <Button Cursor="Hand" Style="{StaticResource btn_SearchStyle}" Click="btn_TechRouteSearch_Click" Name="btn_TechRouteSearch"  Background="White" BorderBrush="White">
                             <Image Height="15" Source="../../Images/Zoom.ico"></Image>
                         </Button>
                     </StackPanel>
 
                     <TextBlock Text="编制日期:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Grid.Row="1"></TextBlock>
-                    <DatePicker  Cursor="Hand" Grid.Column="3" Grid.Row="1" VerticalAlignment="Center"></DatePicker>
+                    <DatePicker Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" Cursor="Hand" Grid.Column="3" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center"></DatePicker>
 
                     <TextBlock Text="生产车间:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="4" Grid.Row="1"></TextBlock>
                     <StackPanel Grid.Column="5" Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
-                        <TextBox IsReadOnly="True" Text="点击放大镜选择" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
+                        <TextBox  VerticalAlignment="Center" IsReadOnly="True" Text="点击放大镜选择" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
                         <Button Cursor="Hand" Style="{StaticResource btn_SearchStyle}" Name="btn_WorkCenterSearch" Background="White" BorderBrush="White">
                             <Image Height="15" Source="../../Images/Zoom.ico"></Image>
                         </Button>
@@ -93,18 +97,24 @@
 
                     <TextBlock Text="生产订单:" VerticalAlignment="Center" HorizontalAlignment="Right"  Grid.Row="2"></TextBlock>
                     <StackPanel Grid.Column="1" Grid.Row="2" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
-                        <TextBox IsReadOnly="True" Text="点击放大镜选择" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
+                        <TextBox VerticalAlignment="Center" Name="txtb_ProduceOrderInfo" IsReadOnly="True" Text="点击放大镜选择" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
                         <Button Cursor="Hand" Style="{StaticResource btn_SearchStyle}" Name="btn_SourceOrderSearch" Click="btn_SourceOrderSearch_Click" Background="White" BorderBrush="White">
                             <Image Height="15" Source="../../Images/Zoom.ico"></Image>
                         </Button>
                     </StackPanel>
 
                     <TextBlock Text="派工数量:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2"  Grid.Row="2"></TextBlock>
-                    <TextBox Background="LightGray"  Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" Name="textb_Amount" Grid.Column="3" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Left"></TextBox>
+                    <TextBox  Background="LightGray"  Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" 
+                              Name="textb_Amount" Grid.Column="3" Grid.Row="2" VerticalAlignment="Center" 
+                              HorizontalAlignment="Left" TextChanged="textb_Amount_TextChanged">
+                        <TextBox.ToolTip>
+                            <ToolTip  Visibility="Hidden" Name="toolTip_Amount"  Content="派工数量不能大于可派工总数！" ></ToolTip>
+                        </TextBox.ToolTip>
+                    </TextBox>
 
                     <TextBlock Text="分批来源流转卡:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="4" Grid.Row="2"></TextBlock>
                     <StackPanel Grid.Column="5" Grid.Row="2" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
-                        <TextBox IsReadOnly="True" Text="分批流转卡专项" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
+                        <TextBox  VerticalAlignment="Center" IsReadOnly="True" Text="分批流转卡专项" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
                         <Button Cursor="Hand" Style="{StaticResource btn_SearchStyle}" Name="btn_SoureFlowCardSearch" Background="White" BorderBrush="White">
                             <Image Height="15" Source="../../Images/Zoom.ico"></Image>
                         </Button>
@@ -144,8 +154,9 @@
                         <RowDefinition></RowDefinition>
                         <RowDefinition Height="40"></RowDefinition>
                     </Grid.RowDefinitions>
-                    <DataGrid CanUserAddRows="False" AutoGenerateColumns="False" ColumnWidth="Auto" Name="datagrid_TechRouteInfo" RowHeaderWidth="30">
-                        <DataGrid.Columns>
+                    <DataGrid  CanUserReorderColumns="False" CanUserSortColumns="False" CanUserAddRows="False" 
+                               AutoGenerateColumns="False" ColumnWidth="Auto" Name="datagrid_TechRouteInfo" RowHeaderWidth="30">
+                        <DataGrid.Columns >
                             <DataGridTextColumn Header="行号" IsReadOnly="True" Binding="{Binding Path=TR_ProcessSequence}"></DataGridTextColumn>
                             <DataGridTextColumn Header="工序名称" IsReadOnly="True" Binding="{Binding Path=TR_ProcessName}"></DataGridTextColumn>
                             <DataGridTemplateColumn Header="操作工">
@@ -172,11 +183,11 @@
                             <DataGridTextColumn Header="料废数"></DataGridTextColumn>
                             <DataGridTextColumn Header="不良数"></DataGridTextColumn>
                             <DataGridTextColumn Header="待处理数"></DataGridTextColumn>
-                            <DataGridTextColumn Header="生产车间" IsReadOnly="True"></DataGridTextColumn>
+                            <DataGridTextColumn Header="生产车间" Binding="{Binding Path=WC_Department_Name}" IsReadOnly="True"></DataGridTextColumn>
                             <DataGridTextColumn Header="是否测试工序" IsReadOnly="True"></DataGridTextColumn>
                             <DataGridTextColumn Header="是否返工工序" IsReadOnly="True"></DataGridTextColumn>
-                            <DataGridTextColumn Header="是首道工工序" IsReadOnly="True"></DataGridTextColumn>
-                            <DataGridTextColumn Header="是末道工工序" IsReadOnly="True"></DataGridTextColumn>
+                            <DataGridTextColumn Header="是首道工工序" Binding="{Binding Path=TR_IsFirstProcess, Converter={StaticResource ResourceKey=boolConvert}}"  IsReadOnly="True"></DataGridTextColumn>
+                            <DataGridTextColumn Header="是末道工工序" Binding="{Binding Path=TR_IsLastProcess, Converter={ StaticResource boolConvert}}" IsReadOnly="True"></DataGridTextColumn>
                             <DataGridTextColumn Header="日期"></DataGridTextColumn>
                         </DataGrid.Columns>
                     </DataGrid>
