--- a/BarCodeSystem/ProductDispatch/FlowCard/ItemSearch_Page.xaml
+++ b/BarCodeSystem/ProductDispatch/FlowCard/ItemSearch_Page.xaml
@@ -42,8 +42,10 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition></ColumnDefinition>
                     <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
-                <Button Name="btn_Submit" Grid.Column="1" Click="btn_Submit_Click" Margin="10 0 10 0" Content="选定料品"></Button>
+                <Button Name="btn_Refresh" Grid.Column="1" Click="btn_Refresh_Click" Margin="10 0 10 0" Content="刷新列表"></Button>
+                <Button Name="btn_Submit" Grid.Column="2" Click="btn_Submit_Click" Margin="10 0 10 0" Content="选定料品"></Button>
                 <StackPanel   Orientation="Horizontal" VerticalAlignment="Center" Height="30">
                     <extool:WatermarkTextBox Watermark="输入搜索信息" Margin="0 5"  Name="txtb_ItemInfo" Width="{Binding Path=ActualWidth,ElementName=btn_Submit}" BorderBrush="White" KeyUp="txtb_ItemInfo_KeyUp">
                     </extool:WatermarkTextBox>
